# CAOM-Parquet

./: .gitignore  CAOM-Parquet.md  README.md  config.py  db_connection.py  explore_duckdb.py  explore_lsdb.py  extract_obsquery.py  hats_load.py  pyproject.toml
.cursor/plans/: caom-to-parquet-conversion-004bd217.plan.md
